ローディング追加

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         <table class="table table-bordered table-dark">
             <tbody>
                 <tr>
-                    <th id="perfectures">都道府県</th>
-                    <td>検索結果の都道府県</td>
+                    <th>都道府県</th>
+                    <td  id="perfectures">検索結果の都道府県</td>
                 </tr>
                 <tr>
-                    <th id="city">市区町村</th>
-                    <td>検索結果の市区町村</td>
+                    <th>市区町村</th>
+                    <td id="city">検索結果の市区町村</td>
                 </tr>
                 <tr>
-                    <th id="address">住所</th>
-                    <td>検索結果の住所</td>
+                    <th>住所</th>
+                    <td id="address">検索結果の住所</td>
                 </tr>
             </tbody>
         </table>
@@ -53,6 +53,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.loadingoverlay/latest/loadingoverlay.min.js"></script>
     <script src="./assets/app.js"></script>
 </body>
 </html>
